# spectrical

./: .gitignore  README.md  pyproject.toml
src/spectrical/: Spectrical.py  __init__.py  __main__.py
